Fixed nav button spaces on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,7 @@ header .login:hover {
 
   header .nav-buttons {
     display: flex;
+    justify-content: space-evenly;
   }
 
   header .nav-item {
